--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-emoji-smile"></i>
-          <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="86" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>Klien yang senang</strong></p>
         </div>
       </div><!-- End Stats Item -->
@@ -165,7 +165,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-journal-richtext"></i>
-          <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="50" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>Projects</strong> </p>
         </div>
       </div><!-- End Stats Item -->
@@ -173,7 +173,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-headset"></i>
-          <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="24 Hours" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>Jam Dukungan</strong></p>
         </div>
       </div><!-- End Stats Item -->
@@ -181,7 +181,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-people"></i>
-          <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>Pekerja keras</strong></p>
         </div>
       </div><!-- End Stats Item -->
