--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="col-lg-3 col-md-6">
         <div class="stats-item">
           <i class="bi bi-headset"></i>
-          <span data-purecounter-start="0" data-purecounter-end="24 Hours" data-purecounter-duration="1" class="purecounter"></span>
+          <span data-purecounter-start="0" data-purecounter-end="24" data-purecounter-duration="1" class="purecounter"></span>
           <p><strong>Jam Dukungan</strong></p>
         </div>
       </div><!-- End Stats Item -->
@@ -517,6 +517,15 @@
               <h2 style="color:#fff">Universitas Mitra Bangsa <br> ( Kuliah Karyawan )</h2>
               <a href="https://umiba.online/" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
               <a href="https://umiba.online" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+            </div>
+          </div>
+        <div class="portfolio-content h-100">
+            <img src="https://uisb.info/images/logo/logo1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Product 1</h4>
+              <h2 style="color:#fff">Universitas Islam Sumatera Barat <br> ( Kuliah Karyawan )</h2>
+              <a href="https://uisb.info/" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+              <a href="https://uisb.info" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
             </div>
           </div>
         </div><!-- End Portfolio Item -->
