--- a/index.html
+++ b/index.html
@@ -509,26 +509,51 @@
 
       <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
-      <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-kampus">
-          <div class="portfolio-content h-100">
-            <img src="assets/img/portfolio/LOGO UMIBA_ (1).png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Product 1</h4>
-              <h2 style="color:#fff">Universitas Mitra Bangsa <br> ( Kuliah Karyawan )</h2>
-              <a href="https://umiba.online/" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="https://umiba.online" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        <div class="portfolio-content h-100">
-            <img src="https://uisb.info/images/logo/logo1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Product 2</h4>
-              <h2 style="color:#fff">Universitas Islam Sumatera Barat <br> ( Kuliah Karyawan )</h2>
-              <a href="https://uisb.info/" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-              <a href="https://uisb.info" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-            </div>
-          </div>
-        </div><!-- End Portfolio Item -->
+      <div class="row">
+  <!-- Item 1 -->
+  <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
+    <div class="portfolio-content h-100">
+      <img src="assets/img/portfolio/LOGO UMIBA_ (1).png" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>Product 1</h4>
+        <h2 style="color:#fff">Universitas Mitra Bangsa <br> ( Kuliah Karyawan )</h2>
+        <a href="https://umiba.online/" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link">
+          <i class="bi bi-zoom-in"></i>
+        </a>
+        <a href="https://umiba.online" title="More Details" class="details-link">
+          <i class="bi bi-link-45deg"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Item 2 -->
+  <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
+    <div class="portfolio-content h-100">
+      <img src="https://uisb.info/images/logo/logo1.png" class="img-fluid" alt="">
+      <div class="portfolio-info">
+        <h4>Product 2</h4>
+        <h2 style="color:#fff">Universitas Islam Sumatera Barat <br> ( Kuliah Karyawan )</h2>
+        <a href="https://uisb.info/" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link">
+          <i class="bi bi-zoom-in"></i>
+        </a>
+        <a href="https://uisb.info" title="More Details" class="details-link">
+          <i class="bi bi-link-45deg"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Tambahkan 2 item lagi supaya 1 baris penuh -->
+  <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
+    <!-- Isi item 3 -->
+  </div>
+
+  <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
+    <!-- Isi item 4 -->
+  </div>
+</div>
+<!-- End Portfolio Item -->
 
 
        
