--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 Januari 2002</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62895-3525-30898</span></li>
+              <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62 895-4068-89664</span></li>
               <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Jakarta, Indonesia</span></li>
             </ul>
           </div>
