--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
   <!-- Item 1 -->
   <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
     <div class="portfolio-content h-100">
-      <img src="assets/img/portfolio/LOGO UMIBA_ (1).png" class="img-fluid" alt="">
+      <img src="assets/img/portfolio/LOGO UMIBA_ (1).png" class="img-fluid" alt="" style="width:150px;">
       <div class="portfolio-info">
         <h4>Product 1</h4>
         <h2 style="color:#fff">Universitas Mitra Bangsa <br> ( Kuliah Karyawan )</h2>
@@ -530,7 +530,7 @@
   <!-- Item 2 -->
   <div class="col-lg-3 col-md-6 portfolio-item isotope-item filter-kampus">
     <div class="portfolio-content h-100">
-      <img src="https://uisb.info/images/logo/logo1.png" class="img-fluid" alt="">
+      <img src="https://uisb.info/images/logo/logo1.png" class="img-fluid" alt="" style="width:150px;">
       <div class="portfolio-info">
         <h4>Product 2</h4>
         <h2 style="color:#fff">Universitas Islam Sumatera Barat <br> ( Kuliah Karyawan )</h2>
