--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
         <div class="resume-item">
           <h4>Junior IT <br>( FullStack Website Development )</h4>
           <h5>2023 - Sekarang</h5>
-          <p><em>PT. Equity World Futures, Sudirman, Jakarta</em></p>
+          <p><em>CV.Edukasi Indonesia Jaya</em></p>
         </div><!-- Edn Resume Item -->
 
         <h3 class="resume-title">Hobby</h3>
