--- a/index.html
+++ b/index.html
@@ -339,9 +339,21 @@
         <h3 class="resume-title">Keterampilan</h3>
         <div class="resume-item">
           <li> 
-             <em>Mampu Membuat Pemograman Website</em>
+             <em>Mampu Membuat Pemograman Website Secara Dinamis</em>
           </li>
         </div><!-- Edn Resume Item -->
+
+        <div class="resume-item">
+          <li> 
+             <em>Membuat Website Manajemen Pendataan</em>
+          </li>
+        </div>
+
+        <div class="resume-item">
+          <li> 
+             <em>Membuat Website Pembayaran</em>
+          </li>
+        </div>
 
         <div class="resume-item">
           <li> 
