--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
       <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
       <a href="https://www.instagram.com/kizu_id?igsh=aThnb3EwcjlyYXJ0" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=62895406889664&text=Hallo%20Admin%20Saya%20Mau%20Bertanya%20Soal%20Jasa%20Pembuatan%20Website" class="whatsapp"><i class="bi bi-whatsapp"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
